# hitting_point_optimization

./: CMakeLists.txt  LICENSE  build.sh
include/: hpo_opt_new.h  optimizer_data.h  utils.h
src/: hpo_opt_new.cpp  iiwas_kinematics.cpp  utils.cpp
